--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
 body {
-    
+font-family: 'Times New Roman', Times, serif;
+margin: 0;
+}
+
+header {
+padding: 40px;
+text-align: center;
+background-color: deeppink;
+color: black;
 }
