--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,6 @@ margin: 0;
 header {
 padding: 40px;
 text-align: center;
-background-color: deeppink;
-color: black;
+background-color: rgb(212, 129, 174);
+color: rgb(3, 1, 3);
 }
